# playingRasPi

./: .gitignore  README.md
blinkLED/: blinkled.py  pattern.txt
neopixels/: Pipfile  README.md  setup.cfg
neopixels/app/: config.py  main.py  neo_pixel.py  pattern.py  switch_control.py
neopixels/documents/: ws2812.md
