[metadata]
name = pi-neo-pixels
version = attr: app.__version__
description = play NeoPixels
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires =
    pigpio
    click

[options.entry_points]
console_scripts =
    pi-neo-pixels = app.main:main

